Fixed overlapping lines

--- a/rsvp.css
+++ b/rsvp.css
@@ -192,7 +192,7 @@ body {
 		position: absolute;
 		text-align: left;
 		text-shadow: 1px 1px 1px rgba(255, 255, 255, 1);
-		top: 43px;
+		top: 44px;
 		width: 100%;
 	}
 	#invitation > form > p > input[type="submit"] {
